--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
     },
     "dependencies": {
         "@monaco-editor/react": "^4.7.0",
+        "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-select": "^2.2.6",
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-tabs": "^1.1.13",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "idb": "^8.0.3",
         "lucide-react": "^0.542.0",
         "next": "14.2.3",
         "react": "^18",
         "react-dom": "^18",
         "react-resizable-panels": "^3.0.5",
         "tailwind-merge": "^3.3.1",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "zustand": "^5.0.8"
     },
     "devDependencies": {
         "@types/node": "^20",
