--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@hookform/resolvers": "^5.2.1",
         "@monaco-editor/react": "^4.7.0",
+        "@radix-ui/react-accordion": "^1.2.12",
         "@radix-ui/react-avatar": "^1.1.10",
         "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -26,9 +28,11 @@
         "next": "14.2.3",
         "react": "^18",
         "react-dom": "^18",
+        "react-hook-form": "^7.62.0",
         "react-resizable-panels": "^3.0.5",
         "tailwind-merge": "^3.3.1",
         "tailwindcss-animate": "^1.0.7",
+        "zod": "^4.1.5",
         "zustand": "^5.0.8"
     },
     "devDependencies": {
