--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@supabase/supabase-js": "^2.56.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "framer-motion": "^12.23.12",
         "idb": "^8.0.3",
         "lucide-react": "^0.542.0",
         "next": "14.2.3",
