--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "framer-motion": "^12.23.12",
+        "i18n": "^0.15.1",
+        "i18next": "^25.4.2",
         "idb": "^8.0.3",
         "lucide-react": "^0.542.0",
         "next": "14.2.3",
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.62.0",
+        "react-i18next": "^15.7.3",
         "react-resizable-panels": "^3.0.5",
         "tailwind-merge": "^3.3.1",
         "tailwindcss-animate": "^1.0.7",
