--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@radix-ui/react-select": "^2.2.6",
         "@radix-ui/react-slot": "^1.2.3",
         "@radix-ui/react-tabs": "^1.1.13",
+        "@radix-ui/react-toast": "^1.2.15",
         "@supabase/auth-helpers-nextjs": "^0.10.0",
         "@supabase/supabase-js": "^2.56.1",
         "class-variance-authority": "^0.7.1",
@@ -28,22 +29,27 @@
         "i18n": "^0.15.1",
         "i18next": "^25.4.2",
         "idb": "^8.0.3",
+        "lodash.debounce": "^4.0.8",
         "lucide-react": "^0.542.0",
         "next": "14.2.3",
+        "next-themes": "^0.4.6",
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.62.0",
         "react-i18next": "^15.7.3",
         "react-resizable-panels": "^3.0.5",
+        "react-syntax-highlighter": "^15.6.6",
         "tailwind-merge": "^3.3.1",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^4.1.5",
         "zustand": "^5.0.8"
     },
     "devDependencies": {
+        "@types/lodash.debounce": "^4.0.9",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/react-syntax-highlighter": "^15.5.13",
         "autoprefixer": "^10.4.21",
         "eslint": "^8",
         "eslint-config-next": "14.2.3",
